RESOLVED FIXED158376
RegExp unicode parsing reads an extra character before failing
https://bugs.webkit.org/show_bug.cgi?id=158376
Summary RegExp unicode parsing reads an extra character before failing
Oliver Hunt
Reported 2016-06-03 18:40:57 PDT
RegExp unicode parsing reads an extra character before failing
Attachments
Patch (2.96 KB, patch)
2016-06-03 18:44 PDT, Oliver Hunt
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (1.04 MB, application/zip)
2016-06-03 19:18 PDT, Build Bot
no flags
Archive of layout-test-results from ews102 for mac-yosemite (804.38 KB, application/zip)
2016-06-03 19:30 PDT, Build Bot
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (656.15 KB, application/zip)
2016-06-03 19:39 PDT, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-yosemite (1.42 MB, application/zip)
2016-06-03 19:45 PDT, Build Bot
no flags
Patch (4.10 KB, patch)
2016-06-04 15:29 PDT, Oliver Hunt
no flags
Archive of layout-test-results from ews103 for mac-yosemite (842.59 KB, application/zip)
2016-06-04 16:16 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (827.37 KB, application/zip)
2016-06-04 16:19 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (1.42 MB, application/zip)
2016-06-04 16:27 PDT, Build Bot
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (632.13 KB, application/zip)
2016-06-04 16:36 PDT, Build Bot
no flags
Patch (4.18 KB, patch)
2016-06-05 20:43 PDT, Oliver Hunt
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (918.22 KB, application/zip)
2016-06-05 21:21 PDT, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-yosemite (1.51 MB, application/zip)
2016-06-05 21:37 PDT, Build Bot
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (661.34 KB, application/zip)
2016-06-05 21:39 PDT, Build Bot
no flags
Archive of layout-test-results from ews103 for mac-yosemite (810.19 KB, application/zip)
2016-06-05 21:41 PDT, Build Bot
no flags
Patch (4.75 KB, patch)
2016-06-06 09:42 PDT, Oliver Hunt
saam: review+
Oliver Hunt
Comment 1 2016-06-03 18:44:05 PDT
Build Bot
Comment 2 2016-06-03 19:18:45 PDT
Comment on attachment 280500 [details] Patch Attachment 280500 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1431532 New failing tests: js/regexp-unicode.html
Build Bot
Comment 3 2016-06-03 19:18:49 PDT
Created attachment 280503 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-06-03 19:30:17 PDT
Comment on attachment 280500 [details] Patch Attachment 280500 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1431581 New failing tests: js/regexp-unicode.html
Build Bot
Comment 5 2016-06-03 19:30:21 PDT
Created attachment 280504 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-06-03 19:39:54 PDT
Comment on attachment 280500 [details] Patch Attachment 280500 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1431584 New failing tests: js/regexp-unicode.html
Build Bot
Comment 7 2016-06-03 19:39:58 PDT
Created attachment 280505 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 8 2016-06-03 19:45:08 PDT
Comment on attachment 280500 [details] Patch Attachment 280500 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1431597 New failing tests: js/regexp-unicode.html
Build Bot
Comment 9 2016-06-03 19:45:12 PDT
Created attachment 280506 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Oliver Hunt
Comment 10 2016-06-04 15:29:58 PDT
Build Bot
Comment 11 2016-06-04 16:16:44 PDT
Comment on attachment 280531 [details] Patch Attachment 280531 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1436158 New failing tests: js/regexp-unicode.html
Build Bot
Comment 12 2016-06-04 16:16:48 PDT
Created attachment 280536 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Mark Lam
Comment 13 2016-06-04 16:17:41 PDT
Comment on attachment 280531 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280531&action=review Can you look into why the EWS bots aren't happy? > Source/JavaScriptCore/ChangeLog:8 > + This was a probably harmless bug, but keeps triggering assertions /a probably/probably a/.
Build Bot
Comment 14 2016-06-04 16:19:27 PDT
Comment on attachment 280531 [details] Patch Attachment 280531 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1436161 New failing tests: js/regexp-unicode.html
Build Bot
Comment 15 2016-06-04 16:19:31 PDT
Created attachment 280537 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 16 2016-06-04 16:27:31 PDT
Comment on attachment 280531 [details] Patch Attachment 280531 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1436164 New failing tests: js/regexp-unicode.html
Build Bot
Comment 17 2016-06-04 16:27:35 PDT
Created attachment 280538 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 18 2016-06-04 16:36:10 PDT
Comment on attachment 280531 [details] Patch Attachment 280531 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1436168 New failing tests: js/regexp-unicode.html
Build Bot
Comment 19 2016-06-04 16:36:13 PDT
Created attachment 280539 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Oliver Hunt
Comment 20 2016-06-05 20:43:14 PDT
Mark Lam
Comment 21 2016-06-05 20:54:15 PDT
Comment on attachment 280578 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280578&action=review r=me with ChangeLog typo fix, and if EWS bots are happy. > Source/JavaScriptCore/ChangeLog:8 > + This was a probably harmless bug, but keeps triggering assertions typo still there: /a probably/probably a/.
Build Bot
Comment 22 2016-06-05 21:21:16 PDT
Comment on attachment 280578 [details] Patch Attachment 280578 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1450181 New failing tests: js/regexp-unicode.html
Build Bot
Comment 23 2016-06-05 21:21:19 PDT
Created attachment 280583 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 24 2016-06-05 21:37:01 PDT
Comment on attachment 280578 [details] Patch Attachment 280578 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1450178 New failing tests: js/regexp-unicode.html
Build Bot
Comment 25 2016-06-05 21:37:05 PDT
Created attachment 280584 [details] Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 26 2016-06-05 21:39:04 PDT
Comment on attachment 280578 [details] Patch Attachment 280578 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1450228 New failing tests: js/regexp-unicode.html
Build Bot
Comment 27 2016-06-05 21:39:08 PDT
Created attachment 280585 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 28 2016-06-05 21:41:13 PDT
Comment on attachment 280578 [details] Patch Attachment 280578 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1450251 New failing tests: js/regexp-unicode.html
Build Bot
Comment 29 2016-06-05 21:41:17 PDT
Created attachment 280586 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Oliver Hunt
Comment 30 2016-06-06 09:42:48 PDT
Oliver Hunt
Comment 31 2016-06-06 10:30:04 PDT
Note You need to log in before you can comment on or make changes to this bug.