RegExp unicode parsing reads an extra character before failing https://bugs.webkit.org/show_bug.cgi?id=158376

Reviewed by Saam Barati.

Source/JavaScriptCore:

This was a probably harmless bug, but keeps triggering assertions
for me locally. Essentially we'd see a parse error, set the error
type, but then carry on parsing. In debug builds this asserts, in
release builds you are pretty safe unless you're exceptionally
unlucky with where the error occurs.

* yarr/YarrParser.h:
(JSC::Yarr::Parser::parseEscape):

LayoutTests:

Add a couple of tests.

* js/script-tests/regexp-unicode.js:

Canonical link: https://commits.webkit.org/176500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201714 268f45cc-cd09-0410-ab3c-d52691b4dbfc